--- a/memotest-paulita/css/styles.css
+++ b/memotest-paulita/css/styles.css
@@ -115,6 +115,8 @@ button {
 
 .end-game {
   width: 30%;
+  position: absolute;
+  top: 40px;
 }
 
 .parte1 {
@@ -142,7 +144,6 @@ button {
 }
 
 .parte2 {
-  display: none;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -156,12 +157,55 @@ button {
   border: 1px solid black;
 }
 
+.loser {
+  position: absolute;
+  top: 40px;
+  width: 20%;
+  height: 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f9e9e0;
+  border: 4px solid black;
+  border-radius: 10px;
+  margin-top: 7px;
+}
+.loser p {
+  font-size: 14px;
+  font-family: "Pangolin", cursive;
+  margin: 4px;
+}
+.loser button {
+  width: 50%;
+  margin-top: 10px;
+  margin-bottom: 15px;
+}
+
 .hide {
   display: none;
 }
 
 .pointer {
   pointer-events: none;
+}
+
+@media (max-width: 800px) {
+  .start-game {
+    width: 65%;
+  }
+  .start-game .button {
+    width: 60%;
+  }
+  .start-game p {
+    margin-left: 6px;
+  }
+
+  .game {
+    width: 100%;
+  }
+  .game .imagenes {
+    width: 90%;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
