--- a/memotest-paulita/css/styles.scss
+++ b/memotest-paulita/css/styles.scss
@@ -51,8 +51,6 @@ button {
     margin-bottom: 10px;
 }
 
-// _______________________________________________________________________________
-
 .game { 
     display: flex;
     flex-direction: column;
@@ -120,11 +118,11 @@ button {
     }
 }
 
-// _____________________________________________________________________________
-
 
 .end-game {
     width: 30%;
+    position: absolute;
+    top: 40px;
 }
 
 .parte1 {
@@ -152,7 +150,6 @@ button {
 }
 
 .parte2 {
-    display:none;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -166,6 +163,30 @@ button {
         }
 }
 
+.loser {
+    position: absolute;
+    top: 40px;
+    width: 20%;
+    height: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f9e9e0;
+    border: 4px solid black;
+    border-radius: 10px;
+    margin-top: 7px;        
+     p {
+         font-size: 14px;
+         font-family:  'Pangolin', cursive; 
+         margin: 4px;       
+     }
+    button {
+        width: 50%;
+        margin-top:10px;
+        margin-bottom: 15px;
+    }
+}
+
 .hide {
     display: none;
 }
@@ -176,4 +197,26 @@ button {
 
 .pointer {
     pointer-events: none;
+}
+
+@media(max-width: 800px){
+
+.start-game {
+    width: 65%;
+        .button {
+            width: 60%;
+        }
+        p {
+            margin-left: 6px;
+        }
+    }
+
+.game {
+    width: 100%;
+        .imagenes {
+            width: 90%;
+        }
+    }
+
+
 }
