Cuarta y ultima parte - Memotest terminado

--- a/memotest-paulita/css/styles.css
+++ b/memotest-paulita/css/styles.css
@@ -18,18 +18,15 @@ body {
   border: 15px solid black;
   border-radius: 15px;
 }
-
 .start-game h1 {
   font-family: "Pacifico", cursive;
   color: dodgerblue;
 }
-
 .start-game p {
   font-size: 14px;
   font-family: "Pangolin", cursive;
   margin: 0px;
 }
-
 .start-game input {
   width: 80%;
   height: 20px;
@@ -62,19 +59,17 @@ button {
   border-radius: 15px;
 }
 
-.game .info {
+.info {
   margin-bottom: 25px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
-.game .info h1 {
+.info h1 {
   font-family: "Pacifico", cursive;
   color: dodgerblue;
 }
-
-.game .info p {
+.info p {
   font-size: 14px;
   font-family: "Pangolin", cursive;
   margin: 0px;
@@ -105,7 +100,13 @@ button {
   margin-bottom: 2%;
 }
 
-.imagenes .intentos {
+.flipping {
+  transform: rotateY(180deg);
+  transform-style: preserve-3d;
+  transition: all 0.5s linear;
+}
+
+.intentos {
   margin-top: 10px;
   display: flex;
   justify-content: center;
@@ -114,8 +115,7 @@ button {
   border-radius: 11px;
   background-color: white;
 }
-
-.imagenes .intentos p {
+.intentos p {
   font-size: 14px;
   font-family: "Pangolin", cursive;
   margin: 5px;
@@ -136,18 +136,15 @@ button {
   border-radius: 10px;
   margin-top: 7px;
 }
-
 .parte1 h1 {
   font-family: "Pacifico", cursive;
   color: dodgerblue;
 }
-
 .parte1 p {
   font-size: 14px;
   font-family: "Pangolin", cursive;
   margin: 0px;
 }
-
 .parte1 button {
   width: 37%;
   margin-top: 10px;
@@ -168,6 +165,10 @@ button {
   width: 25%;
   border: 1px solid black;
 }
+.parte2 div p {
+  display: flex;
+  flex-direction: column;
+}
 
 .loser {
   position: absolute;
@@ -182,13 +183,11 @@ button {
   border-radius: 10px;
   margin-top: 7px;
 }
-
 .loser p {
   font-size: 14px;
   font-family: "Pangolin", cursive;
   margin: 4px;
 }
-
 .loser button {
   width: 50%;
   margin-top: 10px;
@@ -223,11 +222,21 @@ button {
   .game .imagenes {
     width: 90%;
   }
-}
-.flipping {
-  transform: rotateY(180deg);
-  transform-style: preserve-3d;
-  transition: all 0.5s linear;
+
+  .end-game {
+    width: 80%;
+  }
+  .end-game .parte2 div {
+    width: 40%;
+  }
+
+  .loser {
+    width: 60%;
+  }
+
+  .volver {
+    width: 40%;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
